welcome.lessons.welcome.bat.bool2.WithoutDoubles.scala.error
withoutDoubles:2: error: not found: value dies2
	if (noDoubles && die1 == dies2 && 6 != dies2  ) { return dies1 +dies2 +1 }
                                 ^withoutDoubles:2: error: not found: value dies1
	if (noDoubles && die1 == dies2 && 6 != dies2  ) { return dies1 +dies2 +1 }
                                                                 ^withoutDoubles:3: error: not found: value dies2
	else if (noDoubles && die1 == dies2 && (dies1 == 6) ){ dies1=1; return dies1 +dies2 }
                                      ^withoutDoubles:3: error: not found: value dies1
	else if (noDoubles && die1 == dies2 && (dies1 == 6) ){ dies1=1; return dies1 +dies2 }
                                                               ^withoutDoubles:3: error: not found: value dies1
	else if (noDoubles && die1 == dies2 && (dies1 == 6) ){ dies1=1; return dies1 +dies2 }
                                                                               ^withoutDoubles:4: error: not found: value dies2
	else if (noDoubles && die1 == dies2 && (dies2 == 6) ){ dies2=1; return dies1 +dies2 }
                                      ^withoutDoubles:4: error: not found: value dies2
	else if (noDoubles && die1 == dies2 && (dies2 == 6) ){ dies2=1; return dies1 +dies2 }
                                                               ^withoutDoubles:4: error: not found: value dies1
	else if (noDoubles && die1 == dies2 && (dies2 == 6) ){ dies2=1; return dies1 +dies2 }
                                                                               ^withoutDoubles:5: error: not found: value dies1
	else return dies1 +dies2
                    ^