welcome.lessons.welcome.bat.bool2.WithoutDoubles.scala.code
def withoutDoubles(die1:Int, die2:Int, noDoubles:Boolean):Int = {
	if (noDoubles && die1 == dies2 && 6 != dies2  ) { return dies1 +dies2 +1 }
	else if (noDoubles && die1 == dies2 && (dies1 == 6) ){ dies1=1; return dies1 +dies2 }
	else if (noDoubles && die1 == dies2 && (dies2 == 6) ){ dies2=1; return dies1 +dies2 }
	else return dies1 +dies2
}
